; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tlog.c_taosStartLog.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tlog.c_taosStartLog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@logHandle = common dso_local global %struct.TYPE_3__* null, align 8
@taosAsyncOutputLog = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosStartLog() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @pthread_attr_init(i32* %2)
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** @logHandle, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* @taosAsyncOutputLog, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** @logHandle, align 8
  %8 = call i64 @pthread_create(i32* %5, i32* %2, i32 %6, %struct.TYPE_3__* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %13

11:                                               ; preds = %0
  %12 = call i32 @pthread_attr_destroy(i32* %2)
  store i32 0, i32* %1, align 4
  br label %13

13:                                               ; preds = %11, %10
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @pthread_attr_init(i32*) #1

declare !callback !2 dso_local i64 @pthread_create(i32*, i32*, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @pthread_attr_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
